--- a/src/Blog/views/index.html.twig
+++ b/src/Blog/views/index.html.twig
@@ -1,1 +1,15 @@
-<h1>Bienvenu sur le blog</h1>
+{% extends "layout-front.html.twig" %}
+
+{% block title "Blog" %}
+
+{% block body %}
+	<h1>Bienvenue sur le blog</h1>
+	<ul>
+		<li>Article 1</li>
+		<li>Article 2</li>
+		<li>Article 3</li>
+		<li>Article 4</li>
+		<li>Article 5</li>
+		<li>Article 6</li>
+	</ul>
+{% endblock body %}
