--- a/src/Blog/views/index.html.twig
+++ b/src/Blog/views/index.html.twig
@@ -3,22 +3,27 @@
 {% block title "Blog" %}
 
 {% block body %}
-	{% for post in posts %}
+	{% for item in items %}
 		<div class="row">
 			<div class="col-lg-8 col-md-10 mx-auto">
 				<div class="post-preview">
 					<a href="#">
 						<h2 class="post-title">
-							{{post.title}}
+							{{item.title}}
 						</h2>
-						<p><img src="{{post.picture}}" alt="{{post.title}}"></p>
+						<p><img src="{{item.picture}}" alt="{{item.title}}"></p>
 					</a>
 					<p class="post-meta">Ecrit par
-						{{post.user_id}},
-						{{post.created_at|ago}}</p>
+						{{item.login}},
+						{{item.created_at|ago}}</p>
 				</div>
 				<hr>
 			</div>
 		</div>
 	{% endfor %}
+		<div class="row mt-5 justify-content-md-center">
+		<div class="offset-lg-2 col-lg-8 col-md-10">	
+			{{paginate(items,'blog.index')}}
+			</div>
+		</div>
 {% endblock body %}
