--- a/views/layout-front.html.twig
+++ b/views/layout-front.html.twig
@@ -38,7 +38,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="/blog">Blog</a>
+							<a class="nav-link" href="{{path('blog.index')}}">Blog</a>
 						</li>
 					</ul>
 				</div>
@@ -46,14 +46,14 @@
 		</nav>
 
 		<!-- Page Header -->
-		<header class="masthead">
+		<header class="masthead" style="background-image: url('img/front.jpg')">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-8 col-md-10 mx-auto">
 						<div class="site-heading">
-							<h1>OC blog</h1>
-							<span class="subheading">Un blog par xavier jeanne</span>
+							<h1>Xavier Jeanne</h1>
+							<span class="subheading">Développeur in progress</span>
 						</div>
 					</div>
 				</div>
