--- a/views/layout-front.html.twig
+++ b/views/layout-front.html.twig
@@ -30,7 +30,7 @@
 		<!-- Navigation -->
 		<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 			<div class="container">
-				<a class="navbar-brand" href="/blog">Accueil</a>
+				<a class="navbar-brand" href="/blog"><i class="fas fa-home"></i></a>
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 					Menu
 					<i class="fas fa-bars"></i>
@@ -39,6 +39,9 @@
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item">
 							<a class="nav-link" href="{{path('blog.index')}}">Blog</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="/blog/#contact">Contact</a>
 						</li>
 					</ul>
 				</div>
