fix post constructor

--- a/src/Blog/views/index.html.twig
+++ b/src/Blog/views/index.html.twig
@@ -14,8 +14,8 @@
 						<p><img src="{{item.picture}}" alt="{{item.title}}"></p>
 					</a>
 					<p class="post-meta">Ecrit par
-						{{item.login}},
-						{{item.created_at|ago}}</p>
+						{{item.userLogin}},
+						{{item.createdAt|ago}}</p>
 				</div>
 				<hr>
 			</div>
