--- a/src/Blog/views/blog.html.twig
+++ b/src/Blog/views/blog.html.twig
@@ -7,7 +7,7 @@
 		<div class="row">
 			<div class="col-lg-8 col-md-10 mx-auto">
 				<div class="post-preview">
-					<a href="{{path('blog.show',{id:item.postId})}}">
+					<a href="{{path('blog.show',{id:item.id})}}">
 						<h2 class="post-title">
 							{{item.title}}
 						</h2>
@@ -16,7 +16,7 @@
 					<p>{{item.abstract}}</p>
 					<p class="post-meta">Ecrit par
 						{{item.login}},
-						{{item.created_at|ago}}</p>
+						{{item.createdAt|ago}}</p>
 				</div>
 				<hr>
 			</div>
