--- a/src/Blog/views/show.html.twig
+++ b/src/Blog/views/show.html.twig
@@ -5,17 +5,19 @@
 {% block background '../img/post.jpg'%}
 
 {% block heading %}
-    <h2>{{item.title}}</h2>
+	<h2>{{item.title}}</h2>
 {% endblock %}
 {% block body %}
-	<div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <div class="post-preview">
-                <img class="img-fluid" src="{{item.picture}}" alt="{{item.title}}">
-                <p class="post-meta text-right">Ecrit par {{item.login}}, {{item.created_at|ago}}</p>
-                <hr>
-                <p>{{item.content|nl2br}}</p>
-            </div>
-        </div>
-      </div>
+	<div class="row text-justify">
+		<div class="col-lg-8 col-md-10 mx-auto">
+			<div class="post-preview">
+				<img class="img-fluid" src="{{item.picture}}" alt="{{item.title}}">
+				<p class="post-meta text-right">Ecrit par
+					{{item.autorUsername}},
+					{{item.createdAt|ago}}</p>
+				<hr>
+				<p>{{item.content|nl2br}}</p>
+			</div>
+		</div>
+	</div>
 {% endblock body %}
