--- a/src/Blog/views/index.html.twig
+++ b/src/Blog/views/index.html.twig
@@ -12,6 +12,7 @@
 							{{item.title}}</h2>
 						<p><img src="{{item.picture}}" alt="{{item.title}}"></p>
 					</a>
+					<p>{{item.abstract}}</p>
 					<p class="post-meta">Ecrit par{{item.autorUsername}},{{item.createdAt|ago}}</p>
 				</div><hr></div>
 		</div>
