--- a/src/Blog/views/show.html.twig
+++ b/src/Blog/views/show.html.twig
@@ -6,6 +6,7 @@
 
 {% block heading %}
 	<h2>{{item.title}}</h2>
+	<span class="subheading">{{item.abstract}}</span>
 {% endblock %}
 {% block body %}
 	<div class="row text-justify">
